--- a/generative-ai/GAN.ipynb
+++ b/generative-ai/GAN.ipynb
@@ -149,7 +149,9 @@
   {
    "cell_type": "markdown",
    "id": "78a61265-9aac-4caa-bf44-e0a2bc2a5ffb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Links"
    ]
@@ -172,12 +174,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f988ce6-eb84-4367-8bc2-3c4084d4d4fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "a2e9d656-34a7-4521-b578-531928d9ba5f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# END"
+   ]
   },
   {
    "cell_type": "code",
