--- a/generative-ai/GenerativeModels.ipynb
+++ b/generative-ai/GenerativeModels.ipynb
@@ -127,7 +127,9 @@
   {
    "cell_type": "markdown",
    "id": "328c8f9e-a718-4d90-ba08-4aac55bfae2b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Unsupervised Learning\n",
     "\n",
@@ -171,7 +173,9 @@
   {
    "cell_type": "markdown",
    "id": "af286a9d-4ec7-47e2-a82b-7613d2313147",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Semi-Supervised Learning\n",
     "\n",
@@ -205,7 +209,9 @@
   {
    "cell_type": "markdown",
    "id": "2a3a0bdc-91e2-4c8c-9ae1-99ad556f1e84",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Reinforcement Learning\n",
     "\n",
@@ -239,7 +245,9 @@
   {
    "cell_type": "markdown",
    "id": "51438d64-7a8f-45bb-bd55-9d92b1a432f8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# END"
    ]
