--- a/generative-ai/StableDiffusion.ipynb
+++ b/generative-ai/StableDiffusion.ipynb
@@ -335,14 +335,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45727765-70fb-4883-8765-d24f0fc064d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a7e70df0-91ef-4d07-972e-8679c594b35c",
    "metadata": {},
@@ -499,7 +491,7 @@
    "id": "ea2dbbdf-6bcf-4ced-8850-31c4561243ff",
    "metadata": {},
    "source": [
-    "## xl txt2img\n",
+    "### xl txt2img\n",
     "\n",
     "- https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0"
    ]
@@ -594,7 +586,7 @@
     "    guidance_scale=12,\n",
     "    eta=0.0,\n",
     "    generator=torch.Generator(DEVICE).manual_seed(10),\n",
-    "    num_images_per_prompt=1\n",
+    "    num_images_per_prompt =1\n",
     ")"
    ]
   },
@@ -602,9 +594,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "d3cf6ac9-44de-4baa-82ca-21227def29e2",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -666,7 +656,7 @@
    "id": "e6da3fb7-2dc0-422a-a9b4-18a5436b9f6b",
    "metadata": {},
    "source": [
-    "## xl img2img"
+    "### xl img2img"
    ]
   },
   {
@@ -771,9 +761,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "fd3b44b8-7990-44f7-be25-6af9c941f204",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
