new content added

--- a/generative-ai/VAE.ipynb
+++ b/generative-ai/VAE.ipynb
@@ -78,7 +78,9 @@
   {
    "cell_type": "markdown",
    "id": "e6567a5b-702b-4d6b-b028-7e6718521aef",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## AE"
    ]
@@ -567,7 +569,9 @@
   {
    "cell_type": "markdown",
    "id": "55448051-b105-452d-83b7-7224fbc48ad7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## VAE"
    ]
@@ -710,7 +714,7 @@
    "id": "83f5c74b-e72f-41c2-a2df-31360aeb003a",
    "metadata": {},
    "source": [
-    "![https://medium.com/geekculture/variational-autoencoder-vae-9b8ce5475f68](content/img2010_VAEalgo.webp \"VAEalgo\")"
+    "![https://medium.com/geekculture/variational-autoencoder-vae-9b8ce5475f68](content/img2005_VAEalgo.webp \"VAEalgo\")"
    ]
   },
   {
@@ -923,6 +927,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "70c80a1d-9533-47b1-a25c-dd3b5fff4330",
+   "metadata": {},
+   "source": [
+    "## Conditional VAE (CVAE)\n",
+    "\n",
+    "- [**Conditional VAE (CVAE)**](https://github.com/timbmg/VAE-CVAE-MNIST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "186545fc-2eb1-4d54-be40-e818ff3a70c4",
+   "metadata": {},
+   "source": [
+    "![https://www.mdpi.com/1424-8220/19/11/2528](content/img2006_CVAE.png \"CVAE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "998c4115-edf1-44d8-a08a-85fe348cb4da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "630d6c18-3b84-49e4-99a6-50770a100332",
    "metadata": {},
    "source": [
@@ -934,9 +964,12 @@
    "id": "95437ea2-2103-4a33-8d6c-bd2933bbeb71",
    "metadata": {},
    "source": [
-    "- [**Conditional VAE (CVAE)**](https://github.com/timbmg/VAE-CVAE-MNIST) - вариационные автоэнкодеры, которые используют дополнительные условные переменные для генерации данных\n",
-    "- [**Beta-VAE**](https://github.com/1Konny/Beta-VAE) - модификация VAE с дополнительным гиперпараметром для баланса между качеством реконструкции и качеством латентного пространства\n",
-    "- [**Disentangled VAE (β-VAE)**](https://github.com/YannDubs/disentangling-vae) - разработан для более эффективного обучения раздельных представлений в латентном пространстве"
+    "- [**Beta-VAE**](https://github.com/1Konny/Beta-VAE) - \n",
+    "Modification of the VAE with an additional hyperparameter to balance between reconstruction quality and latent space quality\n",
+    "- [**Disentangled VAE (β-VAE)**](https://github.com/YannDubs/disentangling-vae) - designed for more effective learning of disentangled representations in the latent space\n",
+    "\r\n",
+    "\r\n",
+    "\r\n"
    ]
   },
   {
@@ -960,10 +993,10 @@
    "id": "0be72d28-d61d-4ba6-91c1-d9263aec1bc2",
    "metadata": {},
    "source": [
+    "- https://www.youtube.com/watch?v=iLoCVz3RJTc&list=PLA0M1Bcd0w8yv0XGiF1wjerjSZVSrYbjh&index=29\n",
     "- https://www.youtube.com/watch?v=6qVfC7P9dEc\n",
     "- https://towardsdatascience.com/difference-between-autoencoder-ae-and-variational-autoencoder-vae-ed7be1c038f2\n",
-    "- https://www.assemblyai.com/blog/introduction-to-variational-autoencoders-using-keras/\n",
-    "- https://www.youtube.com/watch?v=iLoCVz3RJTc&list=PLA0M1Bcd0w8yv0XGiF1wjerjSZVSrYbjh&index=29"
+    "- https://www.assemblyai.com/blog/introduction-to-variational-autoencoders-using-keras/"
    ]
   },
   {
